--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gatsby": "^4.9.2",
+    "gatsby-plugin-categories": "^2.3.7",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
     "gatsby-plugin-google-analytics": "^4.9.0",
@@ -25,14 +26,15 @@
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-remark": "^5.9.0",
     "gatsby-transformer-sharp": "^4.9.0",
+    "gh-pages": "^3.2.3",
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
     "sharp": "^0.30.2",
-    "gh-pages": "^3.2.3"
+    "typeface-merriweather": "0.0.72",
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
     "prettier": "^2.5.1"
